# regix

./: .gitignore  BENCHMARK.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  goal.yaml  planfile.yaml  project.sh  pyproject.toml  pyqual.yaml  regix.yaml  tox.ini
.github/workflows/: ci.yml
docs/: README.md  algitex.md  api.md  architecture.md  code2docs.md  code2llm.md  configuration.md  costs.md  devloop.md  ecosystem.md  index.md  llx.md  planfile.md  proxym.md  redup.md  regix.md  vallm.md
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
regix/: __init__.py  benchmark.py  cache.py  cli.py  compare.py  config.py  exceptions.py  gates.py  git.py  history.py  models.py  report.py  smells.py  snapshot.py
regix/backends/: __init__.py  architecture_backend.py  code2llm_backend.py  coverage_backend.py  docstring_backend.py  lizard_backend.py  radon_backend.py  structure_backend.py  vallm_backend.py
regix/integrations/: __init__.py
scripts/: check_regression.py
tests/: conftest.py  test_backends.py  test_benchmark.py  test_cache.py  test_cli.py  test_code2llm_backend.py  test_compare.py  test_compare_full.py  test_config.py  test_config_full.py  test_exceptions.py  test_gates.py  test_git.py  test_history.py  test_integrations.py  test_models.py  test_regix.py  test_regix_class.py  test_report.py  test_report_full.py  test_smells.py  test_snapshot.py
